--- a/MISA.CukCuk.WebAPIs/MISA.CukCuk.WebAPIs.csproj
+++ b/MISA.CukCuk.WebAPIs/MISA.CukCuk.WebAPIs.csproj
@@ -6,7 +6,9 @@
 
   <ItemGroup>
     <PackageReference Include="Dapper" Version="2.0.90" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="5.0.6" />
     <PackageReference Include="MySqlConnector" Version="1.3.8" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
 
